--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "eyes-selenium",
     "version": "0.0.1",
     "description": "Applitools Eyes SDK For Selenium JavaScript WebDriver",
-    "main": "dist/eyes-selenium.js",
+    "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
     "keywords": [
         "eyes-selenium",
         "Test Automation",
@@ -12,15 +12,28 @@
         "Applitools",
         "Eyes"
     ],
-    "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
     "repository": {
         "type": "git",
         "url": "git://github.com/applitools/eyes-selenium.git"
     },
     "license": "Apache-2.0",
+    "main": "./dist/eyes-selenium.js",
+    "bin": {
+        "eyes-selenium": "./dist/eyes-selenium"
+    },
+    "scripts": {
+        "test": "./tests"
+    },
     "dependencies": {
-
+        "restler": "*",
+        "bluebird": "*"
     },
     "devDependencies": {
+        "mocha": "*",
+        "chai": "*"
+    },
+    "engines": {
+        "node": ">=0.10.17",
+        "npm": ">=1.3.8"
     }
 }
