--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eyes.selenium",
-    "version": "0.0.26",
+    "version": "0.0.27",
     "description": "Applitools Eyes SDK For Selenium JavaScript WebDriver",
     "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
     "keywords": [
@@ -25,9 +25,9 @@
     "license": "Apache-2.0",
     "main": "index",
     "dependencies": {
-        "eyes.utils": "0.0.3",
-        "eyes.sdk": "0.0.26",
-        "selenium-webdriver": "~2.42.1",
+        "eyes.utils": "0.0.4",
+        "eyes.sdk": "0.0.27",
+        "selenium-webdriver": "*",
         "winston": "*"
     },
     "devDependencies": {
