--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dependencies": {
         "eyes.utils": "0.0.9",
         "eyes.sdk": "0.0.37",
-        "selenium-webdriver": "*",
+        "selenium-webdriver": "2.47.0",
         "winston": "*"
     },
     "devDependencies": {
