--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "dependencies": {
         "eyes.utils": "0.0.9",
         "eyes.sdk": "0.0.37",
-        "selenium-webdriver": "2.47.0",
+        "selenium-webdriver": "<=2.47.0",
         "winston": "*"
+    },
+    "peerDependencies": {
+        "selenium-webdriver": "<=2.47.0"
     },
     "devDependencies": {
         "mocha": "*",
