--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eyes.selenium",
-    "version": "0.0.46",
+    "version": "0.0.47",
     "description": "Applitools Eyes SDK For Selenium JavaScript WebDriver",
     "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
     "keywords": [
@@ -29,6 +29,9 @@
         "eyes.sdk": "0.0.43",
         "q": "^1.4.1",
         "winston": "*"
+    },
+    "peerDependencies": {
+        "selenium-webdriver": "<=2.48.2"
     },
     "devDependencies": {
         "mocha": "*",
