--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "selenium",
         "testing",
         "webdriver",
-        "webdriverjs"
+        "webdriverjs",
+        "protractor"
     ],
     "homepage": "http://www.applitools.com/",
     "repository": {
@@ -25,10 +26,9 @@
     "license": "Apache-2.0",
     "main": "index",
     "dependencies": {
-        "eyes.utils": "0.0.17",
-        "eyes.sdk": "0.0.47",
-        "q": "^1.4.1",
-        "winston": "*"
+      "eyes.utils": "0.0.17",
+      "eyes.sdk": "0.0.47",
+        "q": "^1.4.1"
     },
     "devDependencies": {
         "mocha": "*",
