--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ build/Release
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
 tests
+
+yarn.lock
