--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     },
     "scripts": {
         "test": "ava",
-        "test-protractor": "protractor protractor.conf.js"
+        "test-protractor": "npm run test-protractor-default && npm run test-protractor-scaling",
+        "test-protractor-default": "protractor protractor.conf.js --suite=simple,checkInterface",
+        "test-protractor-scaling": "protractor protractor.conf.js --suite=scalingMethods --capabilities.chromeOptions.args='--force-device-scale-factor=1.25'"
     },
     "ava": {
         "concurrency": 1
