update package json for marking as patched.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "eyes.selenium",
+    "name": "eyes.selenium.v68patch",
     "version": "0.0.68",
     "description": "Applitools Eyes SDK For Selenium JavaScript WebDriver",
     "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
