--- a/package.json
+++ b/package.json
@@ -1,56 +1,48 @@
 {
-    "name": "eyes.selenium",
-    "version": "0.0.78",
-    "description": "Applitools Eyes SDK For Selenium JavaScript WebDriver",
-    "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
-    "keywords": [
-        "eyes.selenium",
-        "Test Automation",
-        "Visual Regression",
-        "tests",
-        "SDK",
-        "Applitools",
-        "Eyes",
-        "automation",
-        "selenium",
-        "testing",
-        "webdriver",
-        "webdriverjs",
-        "protractor"
-    ],
-    "homepage": "http://www.applitools.com/",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/applitools/Eyes.Selenium.JavaScript.git"
-    },
-    "license": "SEE LICENSE IN LICENSE",
-    "main": "index",
-    "dependencies": {
-        "eyes.utils": "0.0.26",
-        "eyes.sdk": "0.0.68",
-        "q": "^1.4.1"
-    },
-    "devDependencies": {
-        "selenium-webdriver": "^3.0.0",
-        "protractor": "^5.1.2",
-        "ava": "^0.25.0"
-    },
-    "scripts": {
-        "test": "ava",
-        "test-protractor": "npm run test-protractor-default && npm run test-protractor-scaling",
-        "test-protractor-default": "protractor protractor.conf.js --suite=simple,checkInterface",
-        "test-protractor-scaling": "protractor protractor.conf.js --suite=scalingMethods --capabilities.chromeOptions.args='--force-device-scale-factor=1.25'"
-    },
-    "ava": {
-        "concurrency": 1,
-        "failWithoutAssertions": false,
-        "files": [
-            "test/*.js",
-            "!**/simple-appium-test.js",
-            "!**/simple-sause-test.js"
-        ]
-    },
-    "engines": {
-        "node": ">=6.9.0"
-    }
+  "name": "eyes.selenium",
+  "version": "0.0.78",
+  "description": "Applitools Eyes SDK For Selenium JavaScript WebDriver",
+  "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
+  "keywords": [
+    "eyes.selenium",
+    "Test Automation",
+    "Visual Regression",
+    "tests",
+    "SDK",
+    "Applitools",
+    "Eyes",
+    "automation",
+    "selenium",
+    "testing",
+    "webdriver",
+    "webdriverjs",
+    "protractor"
+  ],
+  "homepage": "http://www.applitools.com/",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/applitools/Eyes.Selenium.JavaScript.git"
+  },
+  "license": "SEE LICENSE IN LICENSE",
+  "main": "index",
+  "dependencies": {
+    "eyes.utils": "0.0.26",
+    "eyes.sdk": "0.0.68",
+    "q": "^1.4.1"
+  },
+  "devDependencies": {
+    "mocha": "^5.0.1",
+    "selenium-webdriver": "^3.0.0",
+    "chromedriver": "^2.35.0",
+    "protractor": "^5.1.2"
+  },
+  "scripts": {
+    "test": "npm run test-selenium && npm run test-protractor",
+    "test-appium": "mocha ./test/appium/**/*.js",
+    "test-selenium": "mocha ./test/selenium/**/*.js",
+    "test-protractor": "protractor protractor.conf.js"
+  },
+  "engines": {
+    "node": ">=6.9.0"
+  }
 }
