--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eyes.selenium.v68patch",
-  "version": "0.0.68",
+  "name": "eyes.selenium.v68memfix",
+  "version": "0.0.68-memfix",
   "description": "Applitools Eyes SDK For Selenium JavaScript WebDriver",
   "author": "Applitools Team <team@applitools.com> (http://www.applitools.com/)",
   "keywords": [
