--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
-sudo: required
+language: node_js
 dist: trusty
+cache:
+  directories:
+    - node_modules
+sudo: required
 addons:
    apt:
       sources:
@@ -7,11 +11,10 @@ addons:
       packages:
          - google-chrome-stable
          # latest version of firefox already installed by default
-language: node_js
 node_js:
-   - "6"
-before_install:
-   - npm config set spin false
+    - "4"
+    - "6"
+    - "8"
 install:
    - npm install -g webdriver-manager
    - webdriver-manager update
