--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": {
     "name": "Applitools Team",
     "email": "team@applitools.com",
-    "url": "https://www.applitools.com"
+    "url": "https://applitools.com"
   },
   "repository": {
     "type": "git",
@@ -50,13 +50,13 @@
     "eyes.sdk": "0.0.70"
   },
   "devDependencies": {
-    "mocha": "^5.0.1",
-    "selenium-webdriver": "^3.0.0",
-    "chromedriver": "^2.35.0",
-    "protractor": "^5.1.2"
+    "mocha": "^5.1.1",
+    "chromedriver": "^2.38.3",
+    "selenium-webdriver": "^2.53.0 || ^3.6.0",
+    "protractor": "^4.0.0 || ^5.3.0"
   },
   "scripts": {
-    "test": "npm run test-selenium && npm run test-protractor",
+    "test": "npm run test-selenium",
     "test-appium": "mocha ./test/appium/**/*.js",
     "test-selenium": "mocha ./test/selenium/**/*.js",
     "test-protractor": "protractor protractor.conf.js"
