--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,48 @@
 language: node_js
 dist: trusty
-cache:
-  directories:
-    - node_modules
 sudo: required
 addons:
-   apt:
-      sources:
-         - google-chrome
-      packages:
-         - google-chrome-stable
-         # latest version of firefox already installed by default
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+      # latest version of Firefox already installed by default
 node_js:
-    - "4"
-    - "6"
-    - "8"
+  - 'node'
+  - '8'
+  - '6'
+  - '4'
+env:
+  matrix:
+    - SELENIUM_VERSION=2 PROTRACTOR_VERSION=4
+    - SELENIUM_VERSION=3 PROTRACTOR_VERSION=5
+  global:
+    - WEBDRIVER_MANAGER_ARGS='--versions.chrome 2.38 --versions.standalone 3.12.0'
+matrix:
+  exclude:
+  - node_js: '4'
+    env: SELENIUM_VERSION=3 PROTRACTOR_VERSION=5
+  - node_js: '8'
+    env: SELENIUM_VERSION=2 PROTRACTOR_VERSION=4
+  - node_js: 'node'
+    env: SELENIUM_VERSION=2 PROTRACTOR_VERSION=4
+before_install:
+  - dpkg --compare-versions `npm -v` ge 3.0 || npm i -g npm@3
+  - rm package-lock.json
 install:
-   - npm install -g webdriver-manager
-   - webdriver-manager update
-   - npm install
+  - npm install selenium-webdriver@^$SELENIUM_VERSION protractor@^$PROTRACTOR_VERSION
+  - npm install
+  - npm install webdriver-manager@10
+  - webdriver-manager update $WEBDRIVER_MANAGER_ARGS
 before_script:
-   - export DISPLAY=:99.0
-   - sh -e /etc/init.d/xvfb start
-   - nohup webdriver-manager start &
-   - sleep 10 # give webdriver some time to start
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - webdriver-manager start $WEBDRIVER_MANAGER_ARGS &
+  - sleep 10 # give webdriver some time to start
 script:
-   - npm run test
-   - npm run test-protractor
+  - node index.js
+  - npm run test-selenium
+  - npm run test-protractor
+after_script:
+  - sh -e /etc/init.d/xvfb stop
