--- a/.travis.yml
+++ b/.travis.yml
@@ -12,33 +12,27 @@ node_js:
   - 'node'
   - '8'
   - '6'
-  - '4'
 env:
   matrix:
     - SELENIUM_VERSION=2 PROTRACTOR_VERSION=4
     - SELENIUM_VERSION=3 PROTRACTOR_VERSION=5
-  global:
-    - WEBDRIVER_MANAGER_ARGS='--versions.chrome 2.38 --versions.standalone 3.12.0'
 matrix:
   exclude:
-  - node_js: '4'
-    env: SELENIUM_VERSION=3 PROTRACTOR_VERSION=5
   - node_js: '8'
     env: SELENIUM_VERSION=2 PROTRACTOR_VERSION=4
   - node_js: 'node'
     env: SELENIUM_VERSION=2 PROTRACTOR_VERSION=4
 before_install:
-  - dpkg --compare-versions `npm -v` ge 3.0 || npm i -g npm@3
   - rm package-lock.json
 install:
   - npm install selenium-webdriver@^$SELENIUM_VERSION protractor@^$PROTRACTOR_VERSION
   - npm install
-  - npm install webdriver-manager@10
-  - webdriver-manager update $WEBDRIVER_MANAGER_ARGS
+  - npm install webdriver-manager
+  - webdriver-manager update
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - webdriver-manager start $WEBDRIVER_MANAGER_ARGS &
+  - webdriver-manager start &
   - sleep 10 # give webdriver some time to start
 script:
   - node index.js
