--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
   "types": "./typings/index.d.ts",
   "dependencies": {
     "@types/node": "*",
-    "eyes.utils": "0.0.29",
-    "eyes.sdk": "0.0.73"
+    "eyes.sdk": "0.0.73",
+    "eyes.utils": "0.0.29"
   },
   "devDependencies": {
     "chromedriver": "^2.38.3",
