--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
   "types": "./typings/index.d.ts",
   "dependencies": {
     "@types/node": "*",
-    "eyes.sdk": "applitools/eyes.sdk.javascript#master",
-    "eyes.utils": "astappiev/eyes.utils#development"
+    "eyes.sdk": "^0.0.74",
+    "eyes.utils": "^0.0.30"
   },
   "devDependencies": {
     "chromedriver": "^2.38.3",
     "mocha": "^5.2.0",
-    "protractor": "^4.0.0 || ^5.3.0",
+    "protractor": "^4.0.0 || ^5.4.0",
     "selenium-webdriver": "^2.53.0 || ^3.6.0"
   },
   "scripts": {
